[Parse] Move standalone_dollar_identifier diagnosis to Parser. Resolves SR-13092.